fixed signup alignment

--- a/src/App.css
+++ b/src/App.css
@@ -108,7 +108,6 @@ p {
 
 /*  Login/ Signup appearence start */
 .auth-container {
-  margin: 0 17rem;
   text-align: center;
 }
 
